# trading-chart

./: .gitignore  CHANGELOG-zh_TW.md  CHANGELOG.md  CORE_COMPLETION_CHECKLIST.md  LICENSE  README.md  README_zh-TW.md  pyproject.toml
ai-docs/: SUMMARY.md  (+1 more)
src/apps/: pyproject.toml
src/core/: pyproject.toml
src/core/core/: __init__.py
src/core/core/components/: __init__.py
src/core/core/components/event/: handler_registry.py
src/core/core/config/: __init__.py  _base.py  logging.py  market_limits.py  settings.py
src/core/core/exceptions/: __init__.py  base.py  middleware.py
src/core/core/implementations/: __init__.py
src/core/core/implementations/memory/: __init__.py
src/core/core/implementations/noop/: __init__.py  event_storage.py
src/core/core/interfaces/: __init__.py
src/core/core/interfaces/auth/: __init__.py  authenticator.py  authorizer.py  token_manager.py
src/core/core/interfaces/common/: __init__.py  rate-limiter.py  rate_limiter.py
src/core/core/interfaces/data/: __init__.py  converter.py  provider.py
src/core/core/interfaces/event/: __init__.py  event_bus.py  event_serializer.py  event_storage.py
src/core/core/interfaces/middleware/: __init__.py  middleware.py  pipeline.py
src/core/core/interfaces/observability/: __init__.py  notification_handler.py
src/core/core/interfaces/storage/: Kline_repository.py  __init__.py  metadata_repository.py  time_sequence_repository.py
src/core/core/models/: __init__.py  types.py
src/core/core/models/auth/: __init__.py  auth_request.py  auth_token.py  enum.py
src/core/core/models/common/: __init__.py  exceptions.py
src/core/core/models/data/: __init__.py  base.py  enum.py  event.py  kline.py  market_data.py  order.py  order_enums.py  trade.py  trading_pair.py
src/core/core/models/event/: Kline_event.py  __init__.py  connection_event.py  error_event.py  event_priority.py  event_query.py  event_storage_stats.py  event_type.py  subscription.py  trade_event.py
src/core/core/models/middleware/: __init__.py  context.py  result.py
src/core/core/models/network/: __init__.py  enum.py
src/core/core/models/storage/: __init__.py  query_option.py  time_series_data.py
src/core/core/validators/: __init__.py  cross_model_validator.py  validation_result.py
src/core/tests/: conftest.py  constants.py
src/core/tests/benchmark/: conftest.py
src/core/tests/benchmark/config/: test_settings_benchmark.py  test_validators_benchmark.py
src/core/tests/contract/: __init__.py  base_contract_test.py  conftest.py  contract_test_report.py  enhanced_contract_tests.py  generate_contract_tests.py
src/core/tests/contract/auth/: test_authenticator_contract.py  test_authenticator_enhanced_contract.py  test_authorizer_contract.py  test_token_manager_contract.py
src/core/tests/contract/common/: __init__.py  test_ratelimiter_contract.py
src/core/tests/contract/data/: __init__.py  test_converter_contract.py  test_data_provider_contract.py  test_market_data_model_contract.py  test_order_model_contract.py  test_trading_pair_model_contract.py
src/core/tests/contract/event/: __init__.py  test_event_bus_contract.py  test_event_serializer_contract.py  test_event_storage_contract.py
src/core/tests/contract/middleware/: __init__.py  test_middleware_contract.py  test_middleware_pipeline_contract.py  test_pipeline_contract.py
src/core/tests/contract/observability/: __init__.py  test_notification_handler_contract.py
src/core/tests/contract/storage/: test_kline_repository_contract.py  test_metadata_repository_contract.py  test_time_series_enhanced_contract.py  test_time_series_repository_contract.py
src/core/tests/fixtures/: __init__.py  event_load_testing.py  performance_metrics.py
src/core/tests/integration/: test_end_to_end_core_system.py
src/core/tests/integration/auth/: __init__.py  conftest.py  test_auth_integration.py  test_auth_provider_switching.py  test_authorization_integration.py  test_coverage_analysis.py  test_performance_benchmarks.py  test_stability_verification.py  test_token_lifecycle.py
src/core/tests/integration/common/: __init__.py  conftest.py  test_component_lifecycle_integration.py  test_core_settings_integration.py  test_end_to_end_common_components.py  test_error_context_tracking_integration.py  test_exception_handling_integration.py  test_middleware_pipeline_integration.py  test_middleware_result_integration.py  test_module_collaboration.py  test_rate_limiter_integration.py  test_rate_limiter_resource_management.py
src/core/tests/integration/config/: test_settings_integration.py
src/core/tests/integration/data/: __init__.py  conftest.py  test_batch_processing_performance.py  test_data_cleaning_integration.py  test_data_consistency.py  test_data_flow_integration.py  test_data_source_failure_recovery.py  test_data_source_switching.py  test_data_validation_integration.py  test_error_data_handling_integration.py  test_memory_optimization_integration.py  test_parallel_processing_integration.py  test_provider_converter_integration.py
src/core/tests/integration/event/: __init__.py  conftest.py  test_event_bus_complete_integration.py  test_event_bus_concurrency.py  test_event_bus_performance.py  test_event_bus_storage_integration.py  test_event_flow_end_to_end_integration.py  test_event_middleware_bus_integration.py  test_event_middleware_integration.py  test_event_priority_integration.py  test_event_processing_integration.py  test_event_serialization_integration.py  test_event_system_quality_assurance.py  test_handler_registration_integration.py
src/core/tests/integration/middleware/: __init__.py  test_dynamic_management.py  test_event_integration.py  test_pipeline_execution.py
src/core/tests/integration/observability/: __init__.py  conftest.py  test_basic_integration_verification.py  test_end_to_end_observability_integration.py  test_error_logging_notification_integration.py  test_infrastructure.py  test_load_generator_monitoring_integration.py  test_load_validation.py  test_logging_multi_output_integration.py  (+11 more)
src/integrations/: pyproject.toml
src/libs/: pyproject.toml
(+158 files in other folders)
