[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-chart-apps"
version = "0.1.0"
description = "Applications for trading-chart."
requires-python = ">=3.11"
dependencies = [
    "trading-chart-core",
]

[tool.uv.sources]
trading-chart-core = { workspace = true }
trading-chart-integrations = { workspace = true }
