[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-chart-core"
version = "0.1.0"
description = "Core library for trading systems, including abstractions and utilities."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[tool.importlinter]
root_packages = ["core"]

[[tool.importlinter.contracts]]
name = "Core module dependency layers"
type = "layers"
layers = [
    "core.implementations",
    "core.interfaces",
    "core.models",
    "core.config",
]
