[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-chart-integrations"
version = "0.1.0"
description = "Integrations with external services for trading-chart."
requires-python = ">=3.11"
dependencies = [
    "trading-chart-core"
]

[tool.uv.sources]
trading-chart-core = { workspace = true }
